JS - Exercise completed - start cleaning the code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </header>
     <main>
       <div class="train-card">
+        <h2>Il costo a te riservato è</h2>
         <h3 id="title"></h3>
+        <h3 id="subtitle"></h3>
       </div>
     </main>
 
