JS - new Formula with isNan

--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
   <body>
     <header>
       <div class="header">
+        <img src="img/train.png" alt="logo">
         <h1>Train Ticket</h1>
       </div>
     </header>
     <main>
-      <div class="train-card">
-        <h2>Il costo a te riservato è</h2>
-        <h3 id="title"></h3>
-        <h3 id="subtitle"></h3>
+      <div class="main-container">
+
+        <div class="train-card">
+          <h2>La tariffa a te riservata è</h2>
+          <h2 id="ticket-rate"></h2>
+          <h3 id="cost"></h3>
+          <h3 id="subtitle"></h3>
+
+        </div>
       </div>
     </main>
 
