CSS - work in progress

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <div class="train-card">
           <h2>La tariffa a te riservata è</h2>
-          <h2 id="ticket-rate"></h2>
-          <h3 id="cost"></h3>
+          <h3 id="ticketRate"></h3>
+          <h3 id="ticketCost"></h3>
           <h3 id="subtitle"></h3>
 
         </div>
