--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
     </header>
     <main>
       <div class="main-container">
+        <div class="train-container">
 
-        <div class="train-card">
-          <h2>La tariffa a te riservata è</h2>
-          <h3 id="ticketRate"></h3>
-          <h3 id="ticketCost"></h3>
-          <h3 id="subtitle"></h3>
+          <div class="train-card">
+            <h2>La tariffa a te riservata è</h2>
+            <h3 id="ticketRate"></h3>
+            <h3 id="ticketCost"></h3>
+            <h3 id="subtitle"></h3>
+          </div>
 
+          <div class="location-card"></div>
         </div>
       </div>
     </main>
